--- a/css/output.css
+++ b/css/output.css
@@ -551,9 +551,29 @@ video {
   }
 }
 
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
 .border-blue-500 {
@@ -585,6 +605,10 @@ video {
   border-width: 1px;
 }
 
+.flex {
+  display: flex;
+}
+
 .table {
   display: table;
 }
@@ -595,6 +619,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .font-serif {
@@ -612,6 +640,11 @@ video {
 
 .m-4 {
   margin: 1rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mx-auto {
